--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT = 3000
-MONGO_URI = my_db_connection_string
+MONGO_URI = mongodb+srv://rayan:NaJ0eyE8S4aTuJFP@cluster0.lqykqsl.mongodb.net/?appName=Cluster0
 NODE_ENV = development
+JWT_SECRET = myjwtsecret
