feature email send to user after creating accound

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0"
+  },
+  "dependencies": {
+    "resend": "^6.6.0"
   }
 }
