--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ PORT = 3000
 MONGO_URI = mongodb+srv://rayan:NaJ0eyE8S4aTuJFP@cluster0.lqykqsl.mongodb.net/?appName=Cluster0
 NODE_ENV = development
 JWT_SECRET = myjwtsecret
+RESEND_API_KEY = re_NPec3xxs_2YPocNJzhTN1cADULVRkBKtj
+EMAIL_FROM_NAME = "RAYAN KHAN"
+EMAIL_FROM = "onboarding@resend.dev"
+CLIENT_URL = http://localhost:5173
