feat : update user profile method

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,6 @@ RESEND_API_KEY = re_NPec3xxs_2YPocNJzhTN1cADULVRkBKtj
 EMAIL_FROM_NAME = "RAYAN KHAN"
 EMAIL_FROM = "onboarding@resend.dev"
 CLIENT_URL = http://localhost:5173
+CLOUDINARY_CLOUD_NAME = dzobfdzwa
+CLOUDINARY_API_KEY = 822939382633249
+CLOUDINARY_API_SECRET = HfuXi8SFj87359uVFxOUjLgVSFY
