FEAT : arcjet protection  for rate limiting

--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,5 @@ CLIENT_URL = http://localhost:5173
 CLOUDINARY_CLOUD_NAME = dzobfdzwa
 CLOUDINARY_API_KEY = 822939382633249
 CLOUDINARY_API_SECRET = HfuXi8SFj87359uVFxOUjLgVSFY
+ARCJET_KEY= ajkey_01ke18qkpdebpr5bxfs6we5hq0
+ARCJET_ENV= development
